# renovate-training

./: .cirrus.yml  README.md  renovate.json
.cirrus/: .cirrus.yml  Dockerfile
sample/: .cirrus.yml  pyproject.toml
sample/.cirrus/: Dockerfile
