[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["olivierursushorribilis <ursusossforever@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.32.2"
aws-cdk-lib = "2.87.0"
boto3 = "1.28.1"
pyyaml = "6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
