[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["olivierursushorribilis <ursusossforever@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.31.0"
aws-cdk-lib = "2.164.0"
boto3 = "1.35.48"
pyyaml = "6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
